# jetblack-fincal

./: .gitignore  README.md  mypy.ini  pyproject.toml
jetblack_fincal/: __init__.py  belgium.py  germany.py  ice.py  netherlands.py  nyse.py  target.py  trayport.py  uk.py
