[tool.poetry]
name = "jetblack-fincal"
version = "0.1.0"
description = "Financial calendars"
authors = ["Rob Blackbourn <rob.blackbourn@googlemail.com>"]
readme = "README.md"
repository = "https://github.com/rob-blackbourn/jetblack-fincal"
packages = [
    { include = "jetblack_fincal" },
]

[tool.poetry.dependencies]
python = "^3.7"
jetblack-datemath = "^1.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.9"
autopep8 = "^1.4"
rope = "^0.14.0"
pytest = "^5.0"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
